language/move-lang/tests/move_check/expansion/invalid_struct_name.exp
error: 

   ┌── tests/move_check/expansion/invalid_struct_name.move:2:12 ───
   │
 2 │     struct no {}
   │            ^^ Invalid struct name 'no'. Struct names must start with 'A'..'Z'
   │

error: 

   ┌── tests/move_check/expansion/invalid_struct_name.move:9:21 ───
   │
 9 │     resource struct no2 {}
   │                     ^^^ Invalid struct name 'no2'. Struct names must start with 'A'..'Z'
   │

